<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_home_screen"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.058" />



    <Button
        android:id="@+id/signout_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signout"
        app:backgroundTint="#F8AF1D"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.949"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.947" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="413dp"
        android:layout_height="440dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="43dp"
        app:layout_constraintBottom_toTopOf="@+id/signout_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <TextView
            android:id="@+id/chemistry_textView_id"
            android:layout_width="115dp"
            android:layout_height="31dp"
            android:text="@string/chemistry"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.053"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.114" />

        <TextView
            android:id="@+id/physics_textView_id"
            android:layout_width="117dp"
            android:layout_height="30dp"
            android:text="@string/physics"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.506"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.114" />

        <TextView
            android:id="@+id/biology_textView_id"
            android:layout_width="110dp"
            android:layout_height="30dp"
            android:text="@string/biology"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.966"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.114" />

        <Button
            android:id="@+id/chemistry_button_id"
            android:layout_width="109dp"
            android:layout_height="107dp"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="19dp"
            android:layout_marginEnd="280dp"
            android:layout_marginRight="280dp"
            android:layout_marginBottom="244dp"
            android:background="@drawable/chemistry"
            android:drawableBottom="@drawable/chemistry"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.111"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/chemistry_textView_id"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/physic_button_id"
            android:layout_width="109dp"
            android:layout_height="102dp"
            android:layout_marginStart="35dp"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="21dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="236dp"
            android:background="@drawable/physic"

            android:drawableBottom="@drawable/physic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/biology_button_id"
            app:layout_constraintStart_toEndOf="@+id/chemistry_button_id"
            app:layout_constraintTop_toBottomOf="@+id/physics_textView_id" />

        <Button
            android:id="@+id/biology_button_id"
            android:layout_width="109dp"
            android:layout_height="102dp"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="22dp"
            android:layout_marginEnd="22dp"
            android:layout_marginRight="22dp"
            android:layout_marginBottom="238dp"
            android:background="@drawable/biology"
            android:drawableBottom="@drawable/biology"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/physic_button_id"
            app:layout_constraintTop_toBottomOf="@+id/biology_textView_id" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>